--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
 </head>
 <body>
   <div id="wall">
-    <div class="tag-1"></div>
+    <div class="tag-1">
+    </div>
+
     <div id="tag-2"></div>
-    <div id="tag-3" class="slick wicked"></div>
+
+    <div id="tag-3" 
+      class="slick wicked">
+    </div>
+
     <div class="parent">
       <div id="tag-4"></div>
     </div>
+
     <div class="parent">
       <div id="tag-5" class="slick"></div>
     </div>
+
     <div class="parent">
       <div></div>
       <div>
